package fun.enhui.design.builder;

import lombok.Getter;
import lombok.Setter;
import lombok.ToString;

@Setter
@Getter
@ToString
public class House {
    private String basic;
    private String wall;
    private String roofed;
}
